--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <md-toolbar color="primary">
-    Marvel Directory
+    Angular Heroes
     <span class="spacer"></span>
     <small>Data provided by Marvel. © 2014 Marvel</small>
     <button *ngIf="sidenav.opened" md-icon-button (click)="sidenav.close()">
