Upgrade to CLI 1.0.0-rc.0 and Material 2.0.0-beta.2

--- a/src/app/characters/character-list/character-list.component.css
+++ b/src/app/characters/character-list/character-list.component.css
@@ -12,7 +12,7 @@ md-input-container {
 }
 
 .search {
-    background-image: url('assets/search-bar.png');
+    background-image: url('/assets/search-bar.png');
     background-repeat: no-repeat;
     background-size: 320px 50px;
     background-position-x: 20px;
@@ -20,6 +20,6 @@ md-input-container {
 }
 
 .content {
-    background-image: url('assets/background.png');
+    background-image: url('/assets/background.png');
     min-height: 100%;
 }
