--- a/src/app/characters/character-list/character-list.component.html
+++ b/src/app/characters/character-list/character-list.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     <div class="search">
         <md-input-container>
-            <input md-input placeholder="Search for characters..." #searchBox (keyup)="search(searchBox.value)">
+            <input mdInput placeholder="Search for characters..." #searchBox (keyup)="search(searchBox.value)">
         </md-input-container>
     </div>
     <md-grid-list cols="4" rowHeight="250">
