--- a/src/app/characters/character-list/character-list.component.html
+++ b/src/app/characters/character-list/character-list.component.html
@@ -10,3 +10,7 @@
         </md-grid-tile>
     </md-grid-list>
 </div>
+<md-toolbar>
+    <span class="spacer"></span>
+    <small>Data provided by Marvel. © 2014 Marvel</small>
+</md-toolbar>
