--- a/src/app/quiz/quiz/quiz.component.html
+++ b/src/app/quiz/quiz/quiz.component.html
@@ -1,9 +1,18 @@
-<div *ngIf="!hero">
+<div *ngIf="!hero" fxLayout="column">
   <md-list>
     <h3 md-subheader>Answer the following questions to find with which hero you match:</h3>
     <app-question *ngFor="let question of questions" [question]=question></app-question>
   </md-list>
-  <button md-button routerLink="/">Cancel</button>
-  <button md-raised-button color="primary" (click)="submit()">Submit</button>
+  <span fxLayout="row" fxLayoutGap="10px" fxFlexAlign="center">
+    <button md-button routerLink="/">Cancel</button>
+    <button md-raised-button color="primary" (click)="submit()">Submit</button>
+  </span>
 </div>
-<p *ngIf="hero">Your are <b>{{hero}}</b></p>
+<div *ngIf="hero" fxLayout="column">
+  <h2 fxFlexAlign="center">You are</h2>
+  <div fxLayout="row">
+    <span fxFlex></span>
+    <app-character-detail [character]="hero"></app-character-detail>
+    <span fxFlex></span>
+  </div>
+</div>
