Upgrade Angular Material and CLI. Show alert for unanswered questions.

--- a/src/app/quiz/quiz/quiz.component.html
+++ b/src/app/quiz/quiz/quiz.component.html
@@ -15,4 +15,7 @@
     <app-character-detail [character]="hero"></app-character-detail>
     <span fxFlex></span>
   </div>
+  <span fxFlexAlign="center">
+    <button md-raised-button color="accent" (click)="resetQuiz()">No I am not!</button>
+  </span>
 </div>
