--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,17 @@
-md-sidenav-container {
-    height: 100vh;
+img {
+  width: 24px;
+  height: 24px;
 }
 
-md-sidenav {
-    width: 320px;
+.fa {
+  font-size: 1.8em;
+}
+
+.content {
+  background-image: url('../assets/background.png');
+  overflow: auto;
+}
+
+.spacer {
+  flex: 1 1 auto;
 }
