--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,28 @@
-<md-toolbar color="primary">
-    Angular Heroes
-    <span class="spacer"></span>
-    <button md-icon-button routerLink="/quiz">
-        <md-icon>assignment</md-icon>
-    </button>
-    <button *ngIf="sidenav.opened" md-icon-button (click)="sidenav.close()">
-        <md-icon>close</md-icon>
-    </button>
-</md-toolbar>
-<md-progress-bar *ngIf="showProgress" color="primary" mode="indeterminate"></md-progress-bar>
-<md-sidenav-container>
-    <md-sidenav align="end" mode="side" #sidenav>
-        <md-tab-group #tabgroup>
-            <md-tab label="Details">
-                <app-character-detail [character]="selectedCharacter"></app-character-detail>
-            </md-tab>
-            <md-tab label="Comics">
-                <app-comic-list *ngIf="selectedCharacter" [characterId]="selectedCharacter.id"></app-comic-list>
-            </md-tab>
-        </md-tab-group>
-    </md-sidenav>
-    <router-outlet></router-outlet>
-</md-sidenav-container>
+<div fxLayout="column" fxFill>
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <a mat-icon-button href="https://www.angular.io/" target="_blank">
+          <img src="assets/angular.png">
+        </a>
+
+        <h2 fxFlex>{{title}}</h2>
+
+        <a mat-icon-button routerLink="quiz">
+          <mat-icon>assignment</mat-icon>
+        </a>
+
+        <a mat-icon-button href="https://github.com/bampakoa/angular-heroes" target="_blank">
+          <mat-icon class="fa fa-github"></mat-icon>
+        </a>
+      </mat-toolbar-row>
+    </mat-toolbar>
+    <div fxFlex class="content">
+      <router-outlet></router-outlet>
+    </div>
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <small fxFlex>version: {{version}}</small>
+        <small>Data provided by Marvel. © 2014 Marvel</small>
+      </mat-toolbar-row>
+    </mat-toolbar>
+</div>
