--- a/src/app/quiz/question/question.component.html
+++ b/src/app/quiz/question/question.component.html
@@ -1,13 +1,13 @@
-<md-list-item>
-  <h4 md-line>
+<mat-list-item>
+  <h4 mat-line>
     <b>{{question.no}}. {{question.description}} ?</b>
   </h4>
-  <span md-line>
+  <span mat-line>
     <p>
-      <md-radio-group (change)="setAnswer($event)" color="primary">
-        <md-radio-button value="yes">Yes</md-radio-button>
-        <md-radio-button value="no">No</md-radio-button>
-      </md-radio-group>
+      <mat-radio-group (change)="setAnswer()" [(ngModel)]="answer" fxLayout="row" fxLayoutGap="10px">
+        <mat-radio-button value="yes">Yes</mat-radio-button>
+        <mat-radio-button value="no">No</mat-radio-button>
+      </mat-radio-group>
     </p>
   </span>
-</md-list-item>
+</mat-list-item>
