Upgrade to Angular 7

--- a/src/app/quiz/question/question.component.css
+++ b/src/app/quiz/question/question.component.css
@@ -1,6 +1,7 @@
-mat-list-item {
+.mat-list-item {
   border: #9370DB solid;
   border-radius: 10px;
   margin: 15px;
   padding: 15px;
+  width: auto;
 }
