--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
         </a>
 
         <a mat-icon-button href="https://github.com/bampakoa/angular-heroes" target="_blank">
-          <mat-icon class="fa fa-github"></mat-icon>
+          <mat-icon class="fab fa-github"></mat-icon>
         </a>
       </mat-toolbar-row>
     </mat-toolbar>
