Show hero caption in the header of the tile

--- a/src/app/characters/character-list/character-list.component.html
+++ b/src/app/characters/character-list/character-list.component.html
@@ -18,7 +18,7 @@
       </div>
       <mat-grid-list cols="4" rowHeight="250">
           <mat-grid-tile *ngFor="let character of characters | async; trackBy:trackByCharacters">
-              <app-character-card [character]="character" (select)="selectCharacter($event)"></app-character-card>
+              <app-character-card [character]="character" (selectedChange)="selectCharacter($event)"></app-character-card>
           </mat-grid-tile>
       </mat-grid-list>
   </mat-drawer-content>
