--- a/src/app/characters/character-card/character-card.component.html
+++ b/src/app/characters/character-card/character-card.component.html
@@ -1,5 +1,5 @@
 <img [src]="getCharacterImage()" alt="photo of {{character.name}}">
-<mat-grid-tile-footer>
+<mat-grid-tile-header>
   <h3 mat-line>{{character.name}}</h3>
   <a mat-icon-button target="_blank" [href]="getCharacterLink()">
       <mat-icon>link</mat-icon>
@@ -7,4 +7,4 @@
   <button mat-icon-button (click)="showCharacter()">
       <mat-icon>info</mat-icon>
   </button>
-</mat-grid-tile-footer>
+</mat-grid-tile-header>
