--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxFill>
     <mat-toolbar color="primary">
       <mat-toolbar-row>
-        <a mat-icon-button href="https://www.angular.io/" target="_blank">
+        <a class="logo" mat-icon-button href="https://www.angular.io/" target="_blank">
           <img src="assets/angular.png">
         </a>
 
