Display copyright information from Marvel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,7 @@
 <div fxLayout="column" fxFill>
-    <mat-toolbar color="primary">
-      <mat-toolbar-row>
-        <a class="logo" mat-icon-button href="https://www.angular.io/" target="_blank">
-          <img src="assets/angular.png">
-        </a>
-
-        <h2 fxFlex>{{title}}</h2>
-
-        <a mat-icon-button href="https://github.com/bampakoa/angular-heroes" target="_blank">
-          <mat-icon class="fab fa-github"></mat-icon>
-        </a>
-      </mat-toolbar-row>
-    </mat-toolbar>
-    <div fxFlex class="content">
-      <router-outlet></router-outlet>
-    </div>
-    <mat-toolbar color="primary">
-      <mat-toolbar-row>
-        <small fxFlex>version: {{version}}</small>
-        <small>Data provided by Marvel. © 2014 Marvel</small>
-      </mat-toolbar-row>
-    </mat-toolbar>
+  <app-header></app-header>
+  <div fxFlex class="content">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
 </div>
