--- a/src/app/comics/comic-list/comic-list.component.html
+++ b/src/app/comics/comic-list/comic-list.component.html
@@ -2,7 +2,7 @@
   <mat-grid-tile *ngIf="showProgress">
     <mat-progress-spinner mode="indeterminate" diameter="96"></mat-progress-spinner>
   </mat-grid-tile>
-  <mat-grid-tile *ngFor="let comic of comics; trackBy:trackByComics">
+  <mat-grid-tile *ngFor="let comic of comics$ | async; trackBy:trackByComics">
     <app-comic-detail [comic]="comic"></app-comic-detail>
   </mat-grid-tile>
 </mat-grid-list>
