--- a/src/app/characters/character-list/character-list.component.html
+++ b/src/app/characters/character-list/character-list.component.html
@@ -13,7 +13,7 @@
     <mat-progress-bar mode="indeterminate" *ngIf="showProgress"></mat-progress-bar>
     <div class="search">
       <mat-form-field>
-        <input matInput placeholder="Search by name" #searchBox (keyup)="search(searchBox.value)" />
+        <input matInput placeholder="Search by name" #searchBox (keyup)="search(searchBox.value)">
         <button
           *ngIf="searchBox?.value"
           mat-button
@@ -27,11 +27,8 @@
       </mat-form-field>
     </div>
     <mat-grid-list cols="4" rowHeight="250">
-      <mat-grid-tile *ngFor="let character of characters$ | async; trackBy: trackByCharacters">
-        <app-character-card
-          [character]="character"
-          (selectedChange)="selectCharacter($event)"
-        ></app-character-card>
+      <mat-grid-tile *ngFor="let character of characters$ | async; trackBy:trackByCharacters">
+        <app-character-card [character]="character" (selectedChange)="selectCharacter($event)"></app-character-card>
       </mat-grid-tile>
     </mat-grid-list>
   </mat-drawer-content>
