style: remove multiline code format

--- a/src/app/characters/character-list/character-list.component.html
+++ b/src/app/characters/character-list/character-list.component.html
@@ -14,14 +14,7 @@
     <div class="search">
       <mat-form-field>
         <input matInput placeholder="Search by name" #searchBox (keyup)="search(searchBox.value)">
-        <button
-          *ngIf="searchBox?.value"
-          mat-button
-          matSuffix
-          mat-icon-button
-          aria-label="Clear"
-          (click)="searchBox.value = ''"
-        >
+        <button *ngIf="searchBox?.value" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="searchBox.value = ''">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
