--- a/src/app/characters/character-list/character-list.component.html
+++ b/src/app/characters/character-list/character-list.component.html
@@ -24,8 +24,9 @@
         <app-character-card [character]="character" (selectedChange)="selectCharacter($event)"></app-character-card>
       </mat-grid-tile>
     </mat-grid-list>
-    <div [hidden]="charactersCounters.count === null" class="paginator">
-      <mat-paginator [length]="charactersCounters.total" [pageSizeOptions]="[20, 30, 50]"></mat-paginator>
-    </div>
+    <p *ngIf="totalCharactersCount > CHARACTERS_LIMIT" class="warning-message">
+      There are more results of your search that are not currently displayed.
+      Please try to refine your search criteria.
+    </p>
   </mat-drawer-content>
 </mat-drawer-container>
