--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,8 +4,8 @@
       <img src="assets/angular.png">
     </a>
     <h2 fxFlex>{{title}}</h2>
-    <a mat-icon-button href="https://github.com/bampakoa/angular-heroes" target="_blank">
-      <mat-icon class="fab fa-github"></mat-icon>
+    <a mat-icon-button href="https://github.com/bampakoa/angular-heroes" target="_blank" matTooltip="View code">
+      <mat-icon>code</mat-icon>
     </a>
   </mat-toolbar-row>
 </mat-toolbar>
