feat: use native css flexbox instead of flex-layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div fxLayout="column" fxFill>
+<div class="container">
   <app-header></app-header>
-  <div fxFlex class="content">
+  <div class="content">
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
