--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
     <a class="logo" mat-icon-button href="https://www.angular.io/" target="_blank">
       <img src="assets/angular.png" width="32px" height="32px">
     </a>
-    <h2 fxFlex>{{title}}</h2>
+    <h2>{{title}}</h2>
     <a mat-icon-button href="https://github.com/bampakoa/angular-heroes" target="_blank" matTooltip="View code">
       <mat-icon>code</mat-icon>
     </a>
