--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,15 @@
+.container {
+  height: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .content {
   background-image: url('../assets/background.png');
   overflow: auto;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
