build: upgrade to Angular 15

--- a/src/app/characters/character-detail/character-detail.component.html
+++ b/src/app/characters/character-detail/character-detail.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="character">
+<mat-card appearance="outlined" *ngIf="character">
   <mat-card-header>
     <img mat-card-avatar [src]="getAvatar()">
     <mat-card-title>{{character.name}}</mat-card-title>
