Improve performance with `NgOptimizedImage`

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <a class="logo" mat-icon-button href="https://www.angular.io/" target="_blank">
-      <img src="assets/angular.png" width="32px" height="32px">
+      <img ngSrc="assets/angular.png" width="32" height="32" priority>
     </a>
     <h2>{{title}}</h2>
     <a mat-icon-button href="https://github.com/bampakoa/angular-heroes" target="_blank" matTooltip="View code">
