Use Control Flow Syntax

--- a/src/app/characters/character-card/character-card.component.html
+++ b/src/app/characters/character-card/character-card.component.html
@@ -1,4 +1,4 @@
-<img [ngSrc]="getCharacterImage()!" width="464" height="261" alt="photo of {{character?.name}}">
+<img [ngSrc]="getCharacterImage()!" width="464" height="261" alt="photo of {{character?.name}}" />
 <mat-grid-tile-header>
   <h3 mat-line>{{character?.name}}</h3>
   <button mat-icon-button (click)="showCharacter()">
