--- a/src/app/characters/character-list/character-list.component.html
+++ b/src/app/characters/character-list/character-list.component.html
@@ -5,24 +5,32 @@
         <app-character-detail [character]="selectedCharacter"></app-character-detail>
       </mat-tab>
       <mat-tab label="Comics">
-        <app-comic-list *ngIf="selectedCharacter" [character]="selectedCharacter"></app-comic-list>
+        @if (selectedCharacter) {
+          <app-comic-list [character]="selectedCharacter"></app-comic-list>
+        }
       </mat-tab>
     </mat-tab-group>
   </mat-drawer>
   <mat-drawer-content>
-    <mat-progress-bar mode="indeterminate" *ngIf="showProgress"></mat-progress-bar>
+    @if (showProgress) {
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    }
     <div class="search">
       <mat-form-field>
-        <input matInput placeholder="Search by name" #searchBox (keyup)="search(searchBox.value)">
-        <button *ngIf="searchBox?.value" matSuffix mat-icon-button aria-label="Clear" (click)="searchBox.value = ''">
-          <mat-icon>close</mat-icon>
-        </button>
+        <input matInput placeholder="Search by name" #searchBox (keyup)="search(searchBox.value)" />
+        @if (searchBox?.value) {
+          <button matSuffix mat-icon-button aria-label="Clear" (click)="searchBox.value = ''">
+            <mat-icon>close</mat-icon>
+          </button>
+        }
       </mat-form-field>
     </div>
     <mat-grid-list cols="4" rowHeight="250">
-      <mat-grid-tile *ngFor="let character of characters$ | async; trackBy:trackByCharacters">
-        <app-character-card [character]="character" (selectedChange)="selectCharacter($event)"></app-character-card>
-      </mat-grid-tile>
+      @for (character of characters$ | async; track character.id) {
+        <mat-grid-tile>
+          <app-character-card [character]="character" (selectedChange)="selectCharacter($event)"></app-character-card>
+        </mat-grid-tile>
+      }
     </mat-grid-list>
   </mat-drawer-content>
 </mat-drawer-container>
