Upgrade to Angular 18

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,7 +8,7 @@
 }
 
 .content {
-  background-image: url('../assets/background.png');
+  background-image: url('../../public/background.png');
   overflow: auto;
   flex-grow: 1;
   flex-shrink: 1;
