--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <a class="logo" mat-icon-button href="https://www.angular.dev/" target="_blank">
-      <img ngSrc="assets/angular.png" fill priority />
+      <img ngSrc="angular.png" fill priority />
     </a>
     <h2>{{title}}</h2>
     <a mat-icon-button href="https://github.com/bampakoa/angular-heroes" target="_blank" matTooltip="View code">
