Use self enclosing tags in components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <app-header></app-header>
+  <app-header />
   <div class="content">
-    <router-outlet></router-outlet>
+    <router-outlet />
   </div>
-  <app-footer></app-footer>
+  <app-footer />
 </div>
