Replace `app.config` with environments

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
     <a class="logo" mat-icon-button href="https://www.angular.dev/" target="_blank">
       <img ngSrc="angular.png" fill priority />
     </a>
-    <h2>{{title}}</h2>
+    <h2>Angular Heroes</h2>
     <a mat-icon-button href="https://github.com/bampakoa/angular-heroes" target="_blank" matTooltip="View code">
       <mat-icon>code</mat-icon>
     </a>
