--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,7 +4,7 @@
       <img ngSrc="angular.png" fill priority />
     </a>
     <h2>Angular Heroes</h2>
-    <a mat-icon-button href="https://github.com/bampakoa/angular-heroes" target="_blank" matTooltip="View code">
+    <a mat-icon-anchor href="https://github.com/bampakoa/angular-heroes" target="_blank" matTooltip="View code">
       <mat-icon>code</mat-icon>
     </a>
   </mat-toolbar-row>
