Add missing tests

--- a/src/app/characters/character-list/character-list.html
+++ b/src/app/characters/character-list/character-list.html
@@ -1,7 +1,7 @@
 <div class="search">
   <mat-form-field>
     <input matInput placeholder="Search by name" #searchBox (keyup)="search(searchBox.value)">
-    @if (searchBox?.value) {
+    @if (searchBox.value) {
       <button matSuffix mat-icon-button aria-label="Clear" (click)="searchBox.value = ''">
         <mat-icon>close</mat-icon>
       </button>
